--- a/frontend/shared/scss/components/checkbox.scss
+++ b/frontend/shared/scss/components/checkbox.scss
@@ -76,6 +76,7 @@ $checkbox-border-radius: 5px;
         flex-direction: row;
         align-items: flex-start;
         justify-content: flex-start;
+        position: relative;
         
         > div:first-child {
             width: 20px;
@@ -97,6 +98,21 @@ $checkbox-border-radius: 5px;
                 stroke-dashoffset: 30;
                 stroke: $color-background;
                 transition: stroke-dashoffset 0.4s 0.1s;
+            }
+
+            &:after {
+                // For indeterminate state
+                content: "";
+                opacity: 0;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                width: 10px;
+                height: 2px;
+                background: $color-background;
+                border-radius: 2px;
+                transition: opacity 0.2s 0s;
             }
 
             ~ div {
@@ -135,6 +151,22 @@ $checkbox-border-radius: 5px;
 
             svg > path {
                 stroke-dashoffset: 0;
+            }
+        }
+    }
+
+    > input:indeterminate + div {
+        > div:first-child {
+            border: $border-width solid $color-primary;
+            background: $color-primary;
+
+            svg > path {
+                stroke-dashoffset: 30;
+            }
+
+            &::after {
+                opacity: 1;
+                transition: opacity 0.2s 0.4s;
             }
         }
     }
