--- a/frontend/shared/scss/base/text-styles.scss
+++ b/frontend/shared/scss/base/text-styles.scss
@@ -61,6 +61,29 @@
     width: 50px;
     border-radius: 5px;
     background: $color-background-shade-darker;
+    background-attachment: fixed;
+    background-image: linear-gradient(90deg, 
+        $color-background-shade-darker 0px, 
+        $color-background-shade 40px, 
+        $color-background-shade-darker 80px,
+        $color-background-shade-darker 50vw,
+        $color-background-shade calc(50vw + 40px),
+        $color-background-shade-darker calc(50vw + 80px)
+    );
+    background-size: 200vw;
+    background-position: 0vw;
+    animation: shine-lines 6s infinite linear;
+    animation-delay: -0.5s;
+    animation-timeline: auto; // Make sure all are using the same timeline
+}
+
+@keyframes shine-lines {
+    0% {
+        background-position: -50vw;
+    }
+    80%, 100% {
+        background-position: 100vw;
+    }
 }
 
 .style-title-semihuge {
