--- a/frontend/shared/scss/base/text-styles.scss
+++ b/frontend/shared/scss/base/text-styles.scss
@@ -890,6 +890,7 @@
 
 .style-image-with-icon {
     position: relative;
+    margin-right: 5px;
 
     .image-component {
         width: var(--block-width, 40px);
@@ -1197,4 +1198,8 @@ ul.style-list {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 0px 15px;
+}
+
+.style-dark {
+    color: $color-dark;
 }
