Added group icon to icon with progress

--- a/frontend/shared/scss/base/text-styles.scss
+++ b/frontend/shared/scss/base/text-styles.scss
@@ -908,6 +908,10 @@
         width: var(--block-width, 40px);
         height: var(--block-width, 40px);
 
+        img {
+            border-radius: $border-radius;
+        }
+
         @media (max-width: 400px) {
             margin-right: 0px;
         }
