Fixed style blue icon

--- a/frontend/shared/scss/base/text-styles.scss
+++ b/frontend/shared/scss/base/text-styles.scss
@@ -951,6 +951,7 @@
         color: $color-dark;
         figure {
             background: $color-background-shade-original;
+            color: $color-dark;
             
         }
     }
