--- a/frontend/shared/scss/base/text-styles.scss
+++ b/frontend/shared/scss/base/text-styles.scss
@@ -892,14 +892,15 @@
     position: relative;
     margin-right: 5px;
 
-    &.primary {
-        color: $color-primary-dark;
+    &.success {
+        color: $color-success-dark;
         figure {
-            background: $color-primary-background;
+            background: $color-success-background;
+            color: $color-success-dark;
         }
 
         > aside {
-            color: $color-primary;
+            color: $color-success;
         }
     }
 
