Added step review companies (#212)
* Added review checkbox

* Added review checkbox translations

* Fixed LoadingButton

* Fixed loading button spinner position

* Added review premises

* Refactored ProgressIcon and GroupIcon

* Removed duplicate style-icon-container

* Fixed style blue icon

* Fixed patch organization unknown tag

* Removed organization image on FunctionReview

* Made premise address required

* Added review companies

* Added save review on save company

* Added update is step companies done

* Added reload members on visibility change FunctionsReview

* Renamed Functions to Responsibilities

* Fixed old name component

* Added hide steps if all complete

* Changed icon progress color primary to success

* Changed toast

Co-authored-by: Simon Backx <git@simonbackx.com>

* Removed todo

---------

Co-authored-by: Simon Backx <git@simonbackx.com>

--- a/frontend/shared/scss/base/text-styles.scss
+++ b/frontend/shared/scss/base/text-styles.scss
@@ -892,14 +892,15 @@
     position: relative;
     margin-right: 5px;
 
-    &.primary {
-        color: $color-primary-dark;
+    &.success {
+        color: $color-success-dark;
         figure {
-            background: $color-primary-background;
+            background: $color-success-background;
+            color: $color-success-dark;
         }
 
         > aside {
-            color: $color-primary;
+            color: $color-success;
         }
     }
 
@@ -950,7 +951,7 @@
     &.gray {
         color: $color-dark;
         figure {
-            background: $color-background-shade;
+            background: $color-background-shade-original;
             color: $color-dark;
             
         }
