Improved visibility of paying organization for manual memberships

--- a/frontend/shared/scss/base/text-styles.scss
+++ b/frontend/shared/scss/base/text-styles.scss
@@ -405,6 +405,10 @@
     @media (max-width: 400px) {
         font-size: 14px;
     }
+
+    strong {
+        @extend .style-strong;
+    }
 }
 
 .inline-size {
