Improved component reuse around payments and wired up quick action
refs STA-73

--- a/frontend/shared/scss/base/text-styles.scss
+++ b/frontend/shared/scss/base/text-styles.scss
@@ -979,6 +979,16 @@
         > * {
             display: block;
         }
+
+        .style-bubble {
+            margin: 2px;
+            width: 16px;
+            height: 16px;
+            min-width: 16px;
+            line-height: 16px;
+            font-size: 12px;
+            font-weight: $font-weight-bold;
+        }
     }
 }
 
