Added support for number of free memberships
fixes STA-80

--- a/frontend/shared/scss/base/text-styles.scss
+++ b/frontend/shared/scss/base/text-styles.scss
@@ -368,6 +368,7 @@
 
 .style-discount-price {
     @extend .style-price-base;
+    font-weight: $font-weight-semibold;
     color: $color-discount;
     margin-left: 5px;
 }
