Added invert dropdown for multiple choice

--- a/frontend/shared/scss/components/buttons.scss
+++ b/frontend/shared/scss/components/buttons.scss
@@ -242,6 +242,11 @@
             display: inline-flex;
         }
 
+        &.margin-space {
+            margin-left: 0.5ch;
+            margin-right: 0.5ch;
+        }
+
         > span {
             min-width: 0;
         }
