--- a/frontend/shared/scss/base/text-styles.scss
+++ b/frontend/shared/scss/base/text-styles.scss
@@ -965,7 +965,7 @@
     &.gray {
         color: $color-dark;
         figure {
-            background: $color-background-shade-original;
+            background: $color-background-shade;
             color: $color-dark;
             
         }
