--- a/frontend/shared/scss/base/text-styles.scss
+++ b/frontend/shared/scss/base/text-styles.scss
@@ -1190,6 +1190,10 @@
     font-style: italic;
 }
 
+.style-underline {
+    text-decoration: underline;
+}
+
 .style-code {
     @extend .style-input-box;
     display: block;
