--- a/frontend/shared/scss/base/text-styles.scss
+++ b/frontend/shared/scss/base/text-styles.scss
@@ -987,12 +987,16 @@
 
         .style-bubble {
             margin: 2px;
-            width: 16px;
+            min-width: 16px;
+            max-width: 42px;
             height: 16px;
             min-width: 16px;
             line-height: 16px;
             font-size: 12px;
             font-weight: $font-weight-bold;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
         }
     }
 }
